# Harkonnen-Labs

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  COOBIE.md  COOBIE_SPEC.md  Cargo.toml  HEARTBEAT.md  IDENTITY.md  MASTER_SPEC.md  OPERATOR_MODEL_ACTIVATION_PLAN.md  README.md  ROADMAP.md  Readme.MD  SETUP.md  SOUL.md  STYLE.md  WORK_WINDOWS_QUICKSTART.md  What-Is-An-AI-Soul.md  assignments.md  docker-compose.calvin.yml  harkonnen.toml
.claude/: settings.json  settings.local.json
.harkonnen/: gap-closure-progress.md  instructions.md  memory-status.json  memory-status.md  phase-a-gaps.md  project-context.md  project-manifest.json  project-scan.md  resume-packet.json  resume-packet.md  stale-memory-history.json  stale-memory-history.md  strategy-register.json  strategy-register.md
calvin/: Cargo.toml
calvin/docker/: Dockerfile
calvin/schema/timescale/: schema.sql
calvin/schema/typedb/: schema.tql
calvin/src/: api.rs  archive.rs  main.rs  metrics.rs  streaming.rs  telemetry.rs
docker/: benchmark-runner.Dockerfile
scripts/: benchmark-devbench.sh  benchmark-locomo.sh  benchmark-longmemeval.sh  benchmark-swebench-pro.sh  benchmark-swebench.sh  benchmark-tau2.sh  bootstrap-calvin-archive-typedb.sh  bootstrap-coobie-memory-stack.sh  bootstrap-local-stack.sh  bootstrap-soul-store-typedb.sh  bootstrap-windows.ps1  coobie-seed-anythingllm.sh  coobie-seed-mcp.sh  devbench_harkonnen_adapter.py  factory-up-linux.sh  factory-up-windows.ps1  launch-anythingllm.sh  launch-harkonnen-local.sh  launch-openclaw.sh  run-benchmarks.sh  run-devbench-harkonnen.sh  run-tau2-harkonnen.sh  run-visible-benchmark-docker.sh  run-visible-benchmark.sh  status-local-stack.sh  stop-anythingllm.sh  tau2_harkonnen_agent.py  tau2_run_harkonnen.py
setups/: ci.toml  discovered-linux.toml  home-linux.toml  lm-studio-lan.toml  lm-studio-local.toml  lm-studio-qwen-link-docker.toml  lm-studio-qwen-link.toml  work-windows.toml
src/: agents.rs  aider_polyglot.rs  api.rs  benchmark.rs  calvin_client.rs  capacity.rs  chat.rs  cladder.rs  claude_pack.rs  cli.rs  config.rs  coobie.rs  coobie_palace.rs  db.rs  embeddings.rs  frames.rs  helmet.rs  hook.rs  livecodebench.rs  llm.rs  locomo.rs  longmemeval.rs  main.rs  mcp_registry.rs  mcp_server.rs  memory.rs  models.rs  operator_model.rs  orchestrator.rs  pidgin.rs  policy.rs  reporting.rs  scenario_delta.rs  scenarios.rs  setup.rs  skill_fetcher.rs  skill_registry.rs  spec.rs  spec_adherence.rs  stamp.rs  (+4 more)
the-soul-of-ai/: 00-README.md  01-Agentic-Engineering.md  02-What-Is-An-AI-Soul.md  03-Artificial-Identity-Architecture.md  03-Ontology-Of-The-Synthetic-Soul.md  04-Governed-Integration.md  (+16 more)
(+280 files in other folders)
