[package]
name = "harkonnen-labs"
version = "0.1.0"
edition = "2021"

[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]

[dependencies]
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
deep_causality = "0.3"
fastembed = { version = "5", features = ["ort-download-binaries"], optional = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["parse", "display"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
