[package]
name = "calvin-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calvin-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
typedb-driver = "3.8.4-rc0"
uuid = { version = "1", features = ["v4"] }
